--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -626,8 +626,18 @@ body.welcome {
         background: url(../img/banner_bg.jpg);
         .container {
             padding-top:60px;
+            .buttons {
+                background-color: rgba(255,255,255,.9);
+                padding:58px 36px;
+                margin-top:100px;
+                .bbtn {
+                }
+            }
             .slogan {
                 color:white;
+                small {
+                    color:white;
+                }
                 background-color: rgba(0,0,0,.7);
                 padding:36px;
                 margin-top:100px;
