--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -382,6 +382,8 @@ body.bookmark-app {
             }
             .count {
                 color: #888;
+                font-size: 12px;
+                font-weight: bold;
                 position:absolute;
                 right: 5px;
                 top: 4px;
