--- a/lianpeng/templates/homepage.html
+++ b/lianpeng/templates/homepage.html
@@ -29,6 +29,28 @@
         </div>
     </div>
 </div>
+<div class="container features">
+    <div class="row-fluid">
+        <div class="span4">
+            <h1><i class="icon-tags"></i> 标签</h1>
+            <p class="span10">
+                用你自己的语言组织管理链接。你可以给收藏的链接分配自己的标签，方便往后能够迅速找回。
+            </p>
+        </div>
+        <div class="span4">
+            <h1><i class="icon-search"></i> 搜索</h1>
+            <p class="span10">
+                利用搜索功能快速找到以前收藏的链接。包括对标题、笔记和标签的搜索，我们默认会将链接对应的网页摘要作为笔记保存，以保留更多额外的相关信息。
+            </p>
+        </div>
+        <div class="span4">
+            <h1><i class="icon-refresh"></i> 同步</h1>
+            <p class="span10">
+                与热门网站的上收藏进行同步。包括Github标星项目、豆瓣“我的喜欢”等，更多网站的支持正在开发中。
+            </p>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block extra_script %}
