--- a/lianpeng/static/css/bootstrap.css
+++ b/lianpeng/static/css/bootstrap.css
@@ -940,6 +940,8 @@ hr.soften{height:1px;margin:40px 0;background-image:-webkit-linear-gradient(left
 .center{text-align:center;}
 body.welcome{padding-top:0px;}body.welcome .banner{height:500px;background:url(../img/banner_bg.jpg);}body.welcome .banner .container{padding-top:60px;}body.welcome .banner .container .buttons{background-color:rgba(255, 255, 255, 0.9);padding:58px 36px;margin-top:100px;}
 body.welcome .banner .container .slogan{color:white;background-color:rgba(0, 0, 0, 0.7);padding:36px;margin-top:100px;}body.welcome .banner .container .slogan small{color:white;}
+body.welcome .features{margin-top:40px;}body.welcome .features h1{margin-bottom:20px;font-size:30px;}
+body.welcome .features p{color:#aaa;font-size:16px;line-height:28px;}
 body.welcome_old{padding-top:0px;}body.welcome_old .logo-box{-webkit-animation:bodyslide 2s ease;margin-top:80px;margin-bottom:30px;}
 body.welcome_old .logo{background:#4fccbf;color:white;display:inline-block;font-size:60px;padding:110px 62px;border:6px solid white;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;}
 body.welcome_old h1.slogan .emphasize{color:#B5E9E3;}
