--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -646,6 +646,18 @@ body.welcome {
             }
         }
     }
+    .features {
+        h1 {
+            margin-bottom:20px;
+            font-size:30px;
+        }
+        margin-top:40px;
+        p {
+            color:#aaa;
+            font-size:16px;
+            line-height:28px;
+        }
+    }
 }
 body.welcome_old {
     padding-top:0px;
