--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -7,11 +7,17 @@
 {% load notifications_tags %}
 
 {% block head_title %}{{ user.username }}{% endblock %}
+
 {% block topbar_base %}
 {% endblock %}
+
 {% block body_class %}
 bookmark-app
 {% endblock %}
+
+{% block messages %}
+{% endblock %}
+
 {% block extra_style %}
 <!-- <link rel="stylesheet" href="{{ STATIC_URL }}css/flat-ui.css" type="text/css" media="screen" charset="utf-8"> -->
 {% endblock %}
@@ -470,6 +476,7 @@ bookmark-app
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.10.1.custom.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/noty/jquery.noty.js" charset="utf-8"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/noty/layouts/top.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/noty/layouts/bottom.js"></script>
 <!-- You can add more layouts if you want -->
 <script type="text/javascript" src="{{ STATIC_URL }}js/noty/themes/default.js" charset="utf-8"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.atwho.js" charset="utf-8"></script>
@@ -481,6 +488,10 @@ bookmark-app
         search_title:"{% trans "Search for:" %}",
         tag_title:"{% trans "Tag:" %}"
     };
+    {% for message in messages %}
+        noty({text: '{{ message }}', type:'{{ message.tags }}', layout: 'bottom'});
+    {% endfor %}
+
 
 </script>
 {% compressed_js 'main' %}
