--- a/lianpeng/templates/site_base.html
+++ b/lianpeng/templates/site_base.html
@@ -87,7 +87,9 @@
 {% endblock %}
 {% block body_base %}
     <div class="container">
-        {% include "_messages.html" %}
+        {% block messages %}
+            {% include "_messages.html" %}
+        {% endblock %}
         {% block body %}
         {% endblock %}
     </div>
