--- a/lianpeng/static/css/bootstrap.css
+++ b/lianpeng/static/css/bootstrap.css
@@ -911,8 +911,10 @@ body.bookmark-app{padding-top:0;}
 .box.list{min-height:200px;height:200px;display:block;cursor:pointer;margin:36px 0;}.box.list .avatar{margin-top:2px;}
 .box.list a.bookmark-link no-repeat{color:#333;margin-top:8px;}
 #lists .nav{margin-bottom:0;}
-#lists .nav>li>a{border-left:4px solid transparent;padding:3px 5px;}
+#lists .nav>li>a{border-left:4px solid transparent;padding:3px 5px;margin:1px 0;}
 #lists .nav>.active>a,#lists .nav>li>a:hover,#lists .nav>.active>a:hover{color:#555555;border-left:4px solid #4fccbf;text-shadow:none;}
+#lists .nav>li.ui-state-highlight.active>a{background:#27ae60;border-left:4px solid #27ae60;color:white;}
+#lists .nav>li.ui-state-highlight>a{background:#2ecc71;color:white;}#lists .nav>li.ui-state-highlight>a .count{color:white;}
 #lists .nav>li>a:hover{border-left:4px solid #888;background:#e8e8e8;}
 #lists .user-lists .list-name,#lists .sys-lists .list-name{position:relative;}#lists .user-lists .list-name .row-fluid [class*="span"],#lists .sys-lists .list-name .row-fluid [class*="span"]{min-height:1px;}
 #lists .user-lists .list-name .name-text,#lists .sys-lists .list-name .name-text{display:inline-block;vertical-align:top;}
