--- a/lianpeng/static/css/bootstrap.css
+++ b/lianpeng/static/css/bootstrap.css
@@ -902,7 +902,7 @@ body.bookmark-app{padding-top:0;}
 .bookmarks .list .bookmark-title-box .actions .dropdown-menu,#explore .bookmarks-box .bookmark-title-box .actions .dropdown-menu,.bookmark-detail .bookmark-title-box .actions .dropdown-menu,#profile #bookmarks .bookmark-title-box .actions .dropdown-menu{right:0;left:auto;}
 .bookmarks .list .bookmark-title-box a.bookmark-title,#explore .bookmarks-box .bookmark-title-box a.bookmark-title,.bookmark-detail .bookmark-title-box a.bookmark-title,#profile #bookmarks .bookmark-title-box a.bookmark-title{overflow:hidden;white-space:nowrap;font-weight:normal;color:#555555;font-size:17.5px;display:block;}.bookmarks .list .bookmark-title-box a.bookmark-title:hover,#explore .bookmarks-box .bookmark-title-box a.bookmark-title:hover,.bookmark-detail .bookmark-title-box a.bookmark-title:hover,#profile #bookmarks .bookmark-title-box a.bookmark-title:hover{color:#4fccbf;}
 .bookmarks .list .bookmark-tags-box,#explore .bookmarks-box .bookmark-tags-box,.bookmark-detail .bookmark-tags-box,#profile #bookmarks .bookmark-tags-box{padding-bottom:2px;}
-.bookmarks .list .bookmark-entry,#explore .bookmarks-box .bookmark-entry,.bookmark-detail .bookmark-entry,#profile #bookmarks .bookmark-entry{position:relative;}.bookmarks .list .bookmark-entry .move,#explore .bookmarks-box .bookmark-entry .move,.bookmark-detail .bookmark-entry .move,#profile #bookmarks .bookmark-entry .move{position:absolute;top:0px;}
+.bookmarks .list .bookmark-entry,#explore .bookmarks-box .bookmark-entry,.bookmark-detail .bookmark-entry,#profile #bookmarks .bookmark-entry{position:relative;}.bookmarks .list .bookmark-entry .move,#explore .bookmarks-box .bookmark-entry .move,.bookmark-detail .bookmark-entry .move,#profile #bookmarks .bookmark-entry .move{position:absolute;top:0px;cursor:pointer;}
 .bookmarks .list .bookmark-entry blockquote,#explore .bookmarks-box .bookmark-entry blockquote,.bookmark-detail .bookmark-entry blockquote,#profile #bookmarks .bookmark-entry blockquote{margin-bottom:0;}
 #bookmarklet-box:hover #arrow{display:block;}
 #bookmarklet-box #arrow{background:url(../img/arrow.png) no-repeat 38px 5px;width:230px;height:150px;position:absolute;top:0;z-index:1000000;left:62%;}
@@ -911,11 +911,11 @@ body.bookmark-app{padding-top:0;}
 .box.list{min-height:200px;height:200px;display:block;cursor:pointer;margin:36px 0;}.box.list .avatar{margin-top:2px;}
 .box.list a.bookmark-link no-repeat{color:#333;margin-top:8px;}
 #lists .nav{margin-bottom:0;}
-#lists .nav>li>a{border-left:4px solid transparent;padding:3px 5px;margin:1px 0;}
-#lists .nav>.active>a,#lists .nav>li>a:hover,#lists .nav>.active>a:hover{color:#555555;border-left:4px solid #4fccbf;text-shadow:none;}
-#lists .nav>li.ui-state-highlight.active>a{background:#27ae60;border-left:4px solid #27ae60;color:white;}
+#lists .nav>li>a{padding:3px 5px;margin:1px 0;}
+#lists .nav>.active>a,#lists .nav>li>a:hover,#lists .nav>.active>a:hover{color:#555555;text-shadow:none;background:#e8e8e8;}#lists .nav>.active>a .icon,#lists .nav>li>a:hover .icon,#lists .nav>.active>a:hover .icon{color:#2ecc71;}
+#lists .nav>li.ui-state-highlight.active>a{background:#27ae60;color:white;}#lists .nav>li.ui-state-highlight.active>a .icon{color:white;}
 #lists .nav>li.ui-state-highlight>a{background:#2ecc71;color:white;}#lists .nav>li.ui-state-highlight>a .count{color:white;}
-#lists .nav>li>a:hover{border-left:4px solid #888;background:#e8e8e8;}
+#lists .nav>li>a:hover{background:#e8e8e8;}
 #lists .user-lists .list-name,#lists .sys-lists .list-name{position:relative;}#lists .user-lists .list-name .row-fluid [class*="span"],#lists .sys-lists .list-name .row-fluid [class*="span"]{min-height:1px;}
 #lists .user-lists .list-name .name-text,#lists .sys-lists .list-name .name-text{display:inline-block;vertical-align:top;}
 #lists .user-lists .list-name .icon,#lists .sys-lists .list-name .icon{margin-top:3px;}#lists .user-lists .list-name .icon.icon-shared-list,#lists .sys-lists .list-name .icon.icon-shared-list{padding-left:2px;}
