--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -333,7 +333,7 @@ bookmark-app
                                             </div>
                                         </div>
                                         <div class="hide actions">
-                                            <ul class="inline unstyled well-small well">
+                                            <ul class="inline unstyled action-ul">
                                                 <li data-toggle="tooltip" title="{% trans "Read mode" %}">
                                                     <a href="javascript:;" class="icon-eye-open preview-action"></a>
                                                 </li>
