--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -137,6 +137,10 @@ a {
     }
     .sidebar-menu li {
         padding:0px 0;
+        &.invite-menu a .icon{
+        }
+        &.explore-menu a .icon {
+        }
         a {
             padding:8px;
             font-size:16px;
