change homepage title

--- a/lianpeng/templates/homepage.html
+++ b/lianpeng/templates/homepage.html
@@ -2,11 +2,11 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Welcome" %}{% endblock %}
+{% block head_title_base %}莲蓬网 - 简单好用的网络书签{% endblock %}
 
 {% block body_class %}welcome{% endblock %}
 {% block extra_head %}
-    <meta name="description"  content="莲蓬是一个社会化书签网站，为你的创意工作和生活建立知识库，结识有趣的人">
+    <meta name="description"  content="莲蓬网是一个社会化书签网站，为你的创意工作和生活建立知识库，结识有趣的人">
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/bdomhbcbkbldbnechblaaaopghdmdcej">
 {% endblock %}
 {% block extra_style%}
