introduce djang-xadmin

--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -113,7 +113,7 @@ bookmark-app
                             <a class="list-name" href="javascript:;">
                                 <i class="icon icon-bookmark"></i> {% trans "All" %}
                                 <small class="label label-inverse pull-right">
-                                    {{ user.bookmark_set.all.count }}
+                                    {{ user.bookmarks.all.count }}
                                 </small>
                             </a>
                         </li>
