--- a/bookmark/templates/bookmark/explore.html
+++ b/bookmark/templates/bookmark/explore.html
@@ -17,6 +17,9 @@
                 <li class="{%if not filter %}active{% endif %}">
                     <a href="{% url bookmark_explore %}"><i class="icon icon-heart"></i> {% trans "Staff picks" %}</a>
                 </li>
+                <li class="{% if filter == 'user' %}active{% endif %}">
+                    <a href="?filter=user"><i class="icon icon-user"></i> {% trans "People" %}</a>
+                </li>
                 {% endcomment %}
                 <li class="{% if filter == 'recent' %}active{% endif %}">
                     <a href="?filter=recent"><i class="icon icon-time"></i> {% trans "Recent List" %}</a>
@@ -25,12 +28,12 @@
                     <a href="?filter=stream"><i class="icon icon-bookmark"></i> {% trans "Recent bookmarked" %}</a>
                 </li>
             </ul>
-                    {% if bookmarks %}
-                        {% include 'bookmark/includes/bookmarks.html' %}
-                    {% endif %}
-                    {% if lists %}
-                        {% include 'bookmark/includes/lists.html' %}
-                    {% endif %}
+            {% if bookmarks %}
+                {% include 'bookmark/includes/bookmarks.html' %}
+            {% endif %}
+            {% if lists %}
+                {% include 'bookmark/includes/lists.html' %}
+            {% endif %}
         </div>
     </div>
     {% include 'bookmark/js/bookmark_form.html' %}
