--- a/bookmark/templates/bookmark/includes/bookmark.html
+++ b/bookmark/templates/bookmark/includes/bookmark.html
@@ -56,7 +56,7 @@
                                 {% endif %}
                                 <div class="row-fluid muted">
                                     <div class="span12">
-                                        <a href="{% url bookmark_list_domain bookmark.domain %}" class="muted"><img src="http://g.etfv.co/http://{{  bookmark.domain  }}" width="16"/>
+                                        <a href="{% url bookmark_list_domain bookmark.domain %}" class="muted"><img src="{{  bookmark.favicon }}" width="16"/>
                                             {{  bookmark.domain  }}</a> &nbsp;
                                         <a href="{% url bookmark_profile bookmark.user%}" class="muted"><i class="icon-user"></i> {{ bookmark.user }}</a>
                                         &nbsp;
