--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -97,6 +97,12 @@ bookmark-app
                     <li><a target="_blank" href="#feedback" data-toggle="modal"><i class="icon-comment"></i> {% trans "Feedback" %}</a></li>
                     <li><a target="_blank" href="{% url help %}" data-toggle="modal"><i class="icon-question-sign"></i> {% trans "Help" %}</a></li>
                 </ul>
+                <hr>
+                <div id="lianbang-container">
+                    <div id="lianbang-tip-box"></div>
+                    <script type="text/javascript" src="http://127.0.0.1:8000/tip/site/815724886710a0dac63df121ec4f3322.js/" charset="utf-8">
+                    </script>
+                </div>
             </div>
         </div>
         <div class="" id="lists">
